intel/bench_25_work/extr_os-tutorial14-checkpointkernelkernel.c_main/log.txt
bench_25_work/extr_os-tutorial14-checkpointkernelkernel.c_main/extr_os-tutorial14-checkpointkernelkernel.c_main.c:22:1: error: 'main' must return 'int'
void main() {
^~~~
int
1 error generated.
HLS FPGA Parse FAILED.
